<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.edu.jaduniv.classroom.activity.EventAndNotice">

    <android.support.v7.widget.Toolbar
        android:id="@+id/post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Posts"
            android:textColor="@color/toolbarContentColor"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/rl_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/post_send_back"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/et_send_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/write_a_message"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="4"
            android:minLines="1"
            tools:text="Sample post" />

        <ImageView
            android:id="@+id/iv_attach_post"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/attach_file"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/attach_file" />

        <ImageView
            android:id="@+id/iv_send_post"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/send"
            android:foreground="?attr/selectableItemBackground"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/frame_selectedFile"
        android:layout_below="@id/post_toolbar"
        android:divider="#00ffffff"
        android:dividerHeight="8dp"
        android:padding="8dp"
        android:stackFromBottom="true"
        android:transcriptMode="normal">

    </ListView>

    <FrameLayout
        android:id="@+id/frame_selectedFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_send"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp" />
</RelativeLayout>